--- a/Charts/openebs/templates/daemonset-ndm.yaml
+++ b/Charts/openebs/templates/daemonset-ndm.yaml
@@ -40,7 +40,7 @@ spec:
 {{- end}}
       containers:
       - name: {{ template "openebs.name" . }}-ndm
-        image: "{{ .Values.image.repository }}{{ .Values.ndm.image }}:{{ .Values.ndm.imageTag }}"
+        image: "{{ .Values.ndm.image.organization }}/{{ .Values.ndm.image.repository }}:{{ .Values.ndm.image.tag }}"
         args:
           - -v=4
 {{- if .Values.featureGates.enabled }}
