--- a/Charts/redis-ha/values.yaml
+++ b/Charts/redis-ha/values.yaml
@@ -2,8 +2,9 @@
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
 image:
+  organization: ghcr.io/neonrelease
   repository: redis
-  tag: 6.0.7-alpine
+  tag: latest
   pullPolicy: IfNotPresent
 
 ## Reference to one or more secrets to be used when pulling images
