--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,7 @@ wwwroot/
 
 # Build artifacts: 
 #
-# NOTE: This assumes that we'll never want to commit folders
-#		    named [bin] or [obj]
+# NOTE: This assumes that we'll never want to commit folders named: [bin] or [obj]
 
 /Build/**
 /Build-Cache/**
