--- a/Charts/openebs/templates/deployment-maya-provisioner.yaml
+++ b/Charts/openebs/templates/deployment-maya-provisioner.yaml
@@ -34,7 +34,7 @@ spec:
       serviceAccountName: {{ template "openebs.serviceAccountName" . }}
       containers:
       - name: {{ template "openebs.name" . }}-provisioner
-        image: "{{ .Values.image.repository }}{{ .Values.provisioner.image }}:{{ .Values.provisioner.imageTag }}"
+        image: "{{ .Values.provisioner.image.organization }}/{{ .Values.provisioner.image.repository }}:{{ .Values.provisioner.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         # OPENEBS_IO_K8S_MASTER enables openebs provisioner to connect to K8s
