use new chart for cstor operator

--- a/Charts/Charts.csproj
+++ b/Charts/Charts.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="kubernetes\templates\tests\" />
+    <Folder Include="openebs-cstor-operator\" />
     <Folder Include="prometheus-operator\" />
   </ItemGroup>
 
