[test]: Fixed a .NET Frametworm unit test dependency

--- a/Test/Test.Neon.Common.net/packages.config
+++ b/Test/Test.Neon.Common.net/packages.config
@@ -11,6 +11,7 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="prometheus-net" version="4.0.0" targetFramework="net48" />
+  <package id="SharpZipLib.NETStandard" version="1.0.7" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
