--- a/Charts/harbor/templates/jobservice/jobservice-dpl.yaml
+++ b/Charts/harbor/templates/jobservice/jobservice-dpl.yaml
@@ -46,7 +46,7 @@ spec:
       {{- end }}
       containers:
       - name: jobservice
-        image: "{{ .Values.jobeservice.image.organization }}/{{ .Values.jobeservice.image.repository }}:{{ .Values.jobeservice.image.tag }}"
+        image: "{{ .Values.jobservice.image.organization }}/{{ .Values.jobeservice.image.repository }}:{{ .Values.jobeservice.image.tag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         livenessProbe:
           httpGet:
