use neon busybox

--- a/Charts/citus-postgresql/templates/statefulset_worker.yaml
+++ b/Charts/citus-postgresql/templates/statefulset_worker.yaml
@@ -43,7 +43,7 @@ spec:
       {{- end }}
       initContainers:
       - name: chmod-er
-        image: busybox:latest
+        image: ghcr.io/neonrelease/busybox:latest
         command:
         - /bin/sh
         - -c
