--- a/Charts/citus-postgresql/templates/statefulset_master.yaml
+++ b/Charts/citus-postgresql/templates/statefulset_master.yaml
@@ -39,7 +39,7 @@ spec:
       {{- end }}
       initContainers:
       - name: chmod-er
-        image: busybox:latest
+        image: ghcr.io/neonrelease/busybox:latest
         command:
         - /bin/sh
         - -c
