--- a/Charts/yugabyte/templates/service.yaml
+++ b/Charts/yugabyte/templates/service.yaml
@@ -225,7 +225,7 @@ spec:
       {{ if contains .name "yb-tservers" }}
       initContainers:
       - name: chmod-er
-        image: busybox:latest
+        image: ghcr.io/neonrelease/busybox:latest
         command:
         - /bin/sh
         - -c
@@ -396,7 +396,7 @@ spec:
 
       {{ if not $root.Values.storage.ephemeral }}
       - name: yb-cleanup
-        image: busybox:1.31
+        image: ghcr.io/neonrelease/busybox:latest
         env:
         - name: USER
           value: "yugabyte"
