--- a/Charts/prometheus-operator/charts/prometheus-node-exporter/values.yaml
+++ b/Charts/prometheus-operator/charts/prometheus-node-exporter/values.yaml
@@ -2,8 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 image:
-  repository: quay.io/prometheus/node-exporter
-  tag: v0.18.0
+  organization: ghcr.io/neonrelease
+  repository: coreos-node-exporter
+  tag: latest
   pullPolicy: IfNotPresent
 
 service:
