--- a/Charts/prometheus-operator/charts/prometheus-node-exporter/templates/daemonset.yaml
+++ b/Charts/prometheus-operator/charts/prometheus-node-exporter/templates/daemonset.yaml
@@ -28,8 +28,8 @@ spec:
 {{- end }}
       containers:
         - name: node-exporter
-          image: {{ .Values.nodeExporter.image.organization }}/{{ .Values.nodeExporter.image.repository }}:{{ .Values.nodeExporter.image.tag }}
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: {{ .Values.global.nodeExporter.image.organization }}/{{ .Values.global.nodeExporter.image.repository }}:{{ .Values.global.nodeExporter.image.tag }}
+          imagePullPolicy: {{ .Values.global.nodeExporter.image.pullPolicy }}
           args:
             - --path.procfs=/host/proc
             - --path.sysfs=/host/sys
