--- a/Charts/grafana/values.yaml
+++ b/Charts/grafana/values.yaml
@@ -50,7 +50,7 @@ livenessProbe:
 
 image:
   organization: ghcr.io/neonrelease
-  repository: grafana-grafana
+  repository: grafana
   tag: latest
   sha: ""
   pullPolicy: IfNotPresent
