--- a/Charts/citus-postgresql/templates/statefulset_worker.yaml
+++ b/Charts/citus-postgresql/templates/statefulset_worker.yaml
@@ -43,7 +43,7 @@ spec:
       {{- end }}
       initContainers:
       - name: chmod-er
-        image: ghcr.io/neonrelease/busybox:latest
+        image: "{{ .Values.busybox.image.organization }}/{{ .Values.busybox.image.repository }}:{{ .Values.busybox.image.tag }}"
         command:
         - /bin/sh
         - -c
