disable tls for now

--- a/Charts/prometheus-operator/values.yaml
+++ b/Charts/prometheus-operator/values.yaml
@@ -1231,7 +1231,7 @@ prometheusOperator:
 
   # Prometheus-Operator v0.39.0 and later support TLS natively.
   tls:
-    enabled: true
+    enabled: false
     # Value must match version names from https://golang.org/pkg/crypto/tls/#pkg-constants
     tlsMinVersion: VersionTLS13
 
