[refactor]: in progress

--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Conf\cluster.conf.sh" />
+    <None Remove="Resources\Conf\cluster.conf" />
     <None Remove="Resources\Helm\citus-postgresql\.helmignore" />
     <None Remove="Resources\Helm\citus-postgresql\Chart.yaml" />
     <None Remove="Resources\Helm\citus-postgresql\OWNERS" />
@@ -658,7 +658,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Conf\cluster.conf.sh">
+    <EmbeddedResource Include="Resources\Conf\cluster.conf">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Helm\grafana\ci\default-values.yaml" />
