--- a/Charts/prometheus-operator/values.yaml
+++ b/Charts/prometheus-operator/values.yaml
@@ -1259,7 +1259,7 @@ prometheusOperator:
       podAnnotations:
         sidecar.istio.io/inject: "false"
       nodeSelector: 
-        neonkube.io/monitor.metrics: "true"
+        neonkube.io/monitor.metrics-internal: "true"
       affinity: {}
       tolerations: []
 
