--- a/Test/Test.Neon.Common/Test.Neon.Common.csproj
+++ b/Test/Test.Neon.Common/Test.Neon.Common.csproj
@@ -36,6 +36,7 @@
     <None Remove="IORes\Resources\Folder2\Folder4\TextFile8.txt" />
     <None Remove="IORes\Resources\Folder2\TextFile6.txt" />
     <None Remove="IORes\Resources\Folder2\TextFile7.txt" />
+    <None Remove="IORes\Resources\Folder8\Test._" />
     <None Remove="IORes\Resources\TextFile1.txt" />
     <None Remove="IORes\Resources\TextFile2.txt" />
   </ItemGroup>
@@ -62,6 +63,7 @@
     <EmbeddedResource Include="IORes\Resources\Folder2\Folder4\TextFile8.txt" />
     <EmbeddedResource Include="IORes\Resources\Folder2\TextFile6.txt" />
     <EmbeddedResource Include="IORes\Resources\Folder2\TextFile7.txt" />
+    <EmbeddedResource Include="IORes\Resources\Folder8\Test._" />
     <EmbeddedResource Include="IORes\Resources\TextFile1.txt" />
     <EmbeddedResource Include="IORes\Resources\TextFile2.txt" />
   </ItemGroup>
